--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,3 +28,22 @@ jobs:
         login-server: sbacr02.azurecr.io
     - name: ACR Push image
       run: docker push sbacr02.azurecr.io/alun01:latest
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build_and_push
+
+    steps:
+    - uses: actions/checkout@v2 
+    
+    - name: Kubernetes set context
+      uses: Azure/k8s-set-context@v1
+      with:
+        kubeconfig: ${{secrets.KUBECONFIG}} # Does this take the whole file? Wow.
+      id: login
+      
+    - name: Kubernetes Deployment
+      run: kubectl apply -f deployment.yaml
+    - name: Service Deployment
+      run: kubectl apply -f service.yaml
+    
